[package]
name = "hamming-resonate"
version = "0.1.0"
edition = "2021"

[lib]
name = "hamming_resonate"
path = "src/lib.rs"

[dependencies]
bstr = "1"
hamming-bitwise-fast = "1"
rayon = "1"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false
