[package]
name = "hamming-resonate"
version = "0.3.0"
edition = "2021"
description = "Fast nearest-neighbour search over fixed-length DNA sequences using Hamming distance"
license = "MIT"
keywords = ["dna", "hamming", "bioinformatics", "sequence", "search"]
categories = ["science", "data-structures", "algorithms"]
readme = "README.md"
repository = "https://github.com/TyberiusPrime/hamming_resonator"

[lib]
name = "hamming_resonate"
path = "src/lib.rs"

[dependencies]
bstr = "1"
rayon = "1"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false

